# szyfrator_projekt

./: .gitignore  CMakeLists.txt  README.md  szyfrator_c++.sln
szyfrator_c++/: CLI.cpp  CLI.h  CeasarCipher.cpp  CeasarCipher.h  CeasarCommunicator.cpp  CeasarCommunicator.h  CeasarSetter.cpp  CeasarSetter.h  CipherCommunicator.cpp  CipherCommunicator.h  CipherSetter.h  CipherStrategy.h  Communicator.h  ConsoleUI.cpp  ConsoleUI.h  EncryptionContext.cpp  EncryptionContext.h  EncryptionScreen.cpp  EncryptionScreen.h  EncryptionScreenCommunicator.cpp  EncryptionScreenCommunicator.h  EnglishCLI.cpp  EnglishCLI.h  Exception.h  FileException.h  FileManager.cpp  FileManager.h  FourSquareCipher.cpp  FourSquareCipher.h  FourSquareCommunicator.cpp  FourSquareCommunicator.h  MainMenu.cpp  MainMenu.h  MainMenuScreen.cpp  MainMenuScreen.h  MainScreen.cpp  MainScreen.h  MainScreenCommunicator.cpp  MainScreenCommunicator.h  MenuScreen.cpp  (+38 more)
szyfrator_c++/Ciphers/: CipherStrategy.h  EncryptionContext.cpp  EncryptionContext.h
szyfrator_c++/Ciphers/CeasarCipher/: CeasarCipher.h
szyfrator_c++/Ciphers/FourSquareCipher/: FourSquareCipher.h  SquareMatrix.cpp  four_square.h
szyfrator_c++/Exceptions/: FileException.h  ValidationException.h
szyfrator_c++/UI/Lang/: en.h
szyfrator_c++/UI/Screens/: ScreenCommunicator.cpp  ScreenController.cpp  ScreenController.h  screens.h
szyfrator_c++/UI/Screens/MainScreen/: MainScreenCommunicator.cpp  MainScreenCommunicator.h
szyfrator_c++/UI/Screens/SettingsScreen/: SettingsScreen.cpp  SettingsScreen.h  SettingsScreenCommunicator.cpp  SettingsScreenCommunicator.h
